# atomr-accel

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md
crates/atomr-accel/: Cargo.toml
crates/atomr-accel-agents/: Cargo.toml  README.md
crates/atomr-accel-agents/src/: embedding_cache.rs  langgraph_nodes.rs  lib.rs  rag.rs  shared_state.rs  vector_index.rs
crates/atomr-accel-cub/: Cargo.toml  build.rs
crates/atomr-accel-cub/benches/: cub_reduce.rs  cub_scan.rs  cub_sort.rs
crates/atomr-accel-cub/src/: dispatch.rs  histogram.rs  lib.rs  reduce.rs  scan.rs  segmented.rs  select.rs  sort.rs
crates/atomr-accel-cub/tests/: cub_histogram_e2e.rs  cub_reduce_e2e.rs  cub_scan_e2e.rs  cub_segmented_e2e.rs  cub_select_e2e.rs  cub_smoke.rs  cub_sort_e2e.rs
crates/atomr-accel-cuda/: Cargo.toml
crates/atomr-accel-cuda-realtime/: Cargo.toml  README.md
crates/atomr-accel-cuda-realtime/kernels/: cloth_springs.cu  coo_spmv.cu  hashmap_probe.cu  particle_step.cu
crates/atomr-accel-cuda-realtime/src/: cloth.rs  fluid.rs  hashmap.rs  image_filter.rs  kernels.rs  lib.rs  multi_pass.rs  particle.rs  reduction.rs  sparse.rs  spatial_index.rs  video_effects.rs
crates/atomr-accel-cuda/benches/: rng_throughput.rs  sgemm_overhead.rs
crates/atomr-accel-cuda/examples/: allgather_bf16.rs  axpy_dot.rs  cluster_launch.rs  conv2d_nhwc_fp16.rs  dgemm.rs  echo_no_gpu.rs  fft_1d.rs  fft_3d.rs  fused_mha_bf16.rs  gemm_fp8.rs  gemv.rs  graph_conditional.rs  ipc_smoke.rs  jit_relu.rs  layernorm.rs  matmul_fp8.rs  pipeline_no_gpu.rs  reduce_scatter_fp8.rs  rng_sobol.rs  rng_uniform.rs  rnn_lstm.rs  sgemm.rs  solver_svd_batched.rs  tensor_reduce.rs  tma_load_store.rs
crates/atomr-accel-cuda/include/: atomr_hopper.cuh
crates/atomr-accel-cuda/src/: dispatcher.rs  dtype.rs  error.rs  gpu_ref.rs  lib.rs  nvrtc_cache.rs  observability.rs  prelude.rs  streams_pipeline.rs
crates/atomr-accel-cuda/tests/: contract_e2e.rs  end_to_end_e2e.rs  kernel_envelope.rs  pinned_memcpy_e2e.rs  pinned_pool_lifecycle.rs  replay_persistence.rs  rng_fill_e2e.rs  sgemm_e2e.rs  spmv_e2e.rs  supervisor_decider.rs  svd_e2e.rs  typed_alloc.rs  watch_generation.rs
crates/atomr-accel-cutlass/: Cargo.toml  build.rs
crates/atomr-accel-cutlass/cutlass/: README.md
crates/atomr-accel-cutlass/examples/: cutlass_gemm_fp8.rs  cutlass_grouped_gemm.rs
crates/atomr-accel-cutlass/include/: atomr_cutlass.cuh
crates/atomr-accel-cutlass/src/: actor.rs  conv.rs  dtype.rs  evt.rs  gemm.rs  grouped_gemm.rs  lib.rs  plan_cache.rs
crates/atomr-accel-cutlass/tests/: cutlass_prebuilt.rs  cutlass_smoke.rs
crates/atomr-accel-flashattn/: Cargo.toml
crates/atomr-accel-flashattn/examples/: fa2_fwd_bf16.rs
crates/atomr-accel-flashattn/include/: atomr_flash_adapter.h
crates/atomr-accel-flashattn/src/: actor.rs  dispatch.rs  fa2.rs  fa3.rs  lib.rs  paged.rs  prefill.rs  varlen.rs
crates/atomr-accel-flashattn/tests/: flashattn_smoke.rs
crates/atomr-accel-patterns/: Cargo.toml  README.md
crates/atomr-accel-patterns/examples/: batching_no_gpu.rs  cascade_no_gpu.rs  fair_share_no_gpu.rs  moe_no_gpu.rs  speculative_no_gpu.rs
crates/atomr-accel-patterns/src/: batching.rs  cascade.rs  hot_swap.rs  lib.rs  mock.rs  moe.rs  replica_pool.rs  scheduler.rs  speculative.rs
crates/atomr-accel-py/: Cargo.toml  README.md  pyproject.toml
crates/atomr-accel-py/src/: agents.rs  blas.rs  buffer.rs  collective.rs  cub.rs  cudnn.rs  cutlass.rs  device.rs  errors.rs  fft.rs  flashattn.rs  graph.rs  lib.rs  memory.rs  nvrtc.rs  patterns.rs  realtime.rs  rng.rs  runtime.rs  solver.rs  system.rs  telemetry.rs  tensorrt.rs  train.rs
crates/atomr-accel-py/tests/: conftest.py  test_agents.py  test_async.py  test_blas.py  test_cub.py  test_cudnn.py  test_cutlass.py  test_dtypes.py  test_fft.py  test_flashattn.py  test_graph.py  test_handles.py  test_memory.py  test_nvrtc.py  test_patterns.py  test_realtime.py  test_rng.py  test_smoke.py  test_solver.py  test_telemetry.py  test_tensorrt.py  test_train.py
crates/atomr-accel-telemetry/: Cargo.toml
crates/atomr-accel-telemetry/examples/: cupti_trace.rs
crates/atomr-accel-telemetry/src/: lib.rs  nvtx.rs  trace.rs
crates/atomr-accel-telemetry/tests/: nvml_smoke.rs
crates/atomr-accel-tensorrt/: Cargo.toml  build.rs
crates/atomr-accel-tensorrt/csrc/: nvinfer_shim.cpp  nvinfer_shim.h  onnx_parser.cpp  plugin_proxy.cpp  rust_bridge.h
crates/atomr-accel-tensorrt/examples/: onnx_resnet50_int8.rs
crates/atomr-accel-tensorrt/src/: actor.rs  builder.rs  calibration.rs  engine.rs  error.rs  lib.rs  onnx.rs  plugin.rs  runtime.rs  sys.rs
crates/atomr-accel-tensorrt/tests/: plugin_register.rs  tensorrt_link_smoke.rs  tensorrt_smoke.rs
crates/atomr-accel/src/: backend.rs  completion.rs  dtype.rs  error.rs  gpu_ref.rs  kernel.rs  lib.rs
crates/rakka-accel/: Cargo.toml
crates/rakka-accel-agents/: Cargo.toml  README.md
crates/rakka-accel-agents/src/: embedding_cache.rs  langgraph_nodes.rs  lib.rs  rag.rs  shared_state.rs  vector_index.rs
crates/rakka-accel-cuda/: Cargo.toml
crates/rakka-accel-cuda-realtime/: Cargo.toml  README.md
crates/rakka-accel-cuda-realtime/src/: cloth.rs  fluid.rs  hashmap.rs  image_filter.rs  kernels.rs  lib.rs  multi_pass.rs  particle.rs  reduction.rs  sparse.rs  spatial_index.rs  video_effects.rs
crates/rakka-accel-cuda/benches/: rng_throughput.rs  sgemm_overhead.rs
crates/rakka-accel-cuda/examples/: echo_no_gpu.rs  fft_1d.rs  jit_relu.rs  pipeline_no_gpu.rs  rng_uniform.rs  sgemm.rs
crates/rakka-accel-cuda/src/: dispatcher.rs  error.rs  gpu_ref.rs  lib.rs  observability.rs  prelude.rs  streams_pipeline.rs
crates/rakka-accel-cuda/tests/: contract_e2e.rs  end_to_end_e2e.rs  kernel_envelope.rs  (+10 more)
crates/rakka-accel-patterns/: Cargo.toml  README.md
crates/rakka-accel-py/: Cargo.toml  README.md  pyproject.toml
crates/rakka-accel-train/: Cargo.toml  README.md
crates/rakka-cuda/: Cargo.toml
crates/rakka-cuda-agents/: Cargo.toml
crates/rakka-cuda-patterns/: Cargo.toml
crates/rakka-cuda-realtime/: Cargo.toml
crates/rakka-cuda-train/: Cargo.toml
(+350 files in other folders)
