[workspace]
resolver = "2"
members = [
    "crates/atomr-accel",            # backend-agnostic core (umbrella)
    "crates/atomr-accel-cuda",       # NVIDIA CUDA implementation
    "crates/atomr-accel-cub",        # CUB device-wide primitives (Phase 5)
    "crates/atomr-accel-patterns",   # backend-agnostic blueprints
    "crates/atomr-accel-train",      # backend-agnostic training blueprints
    "crates/atomr-accel-agents",     # backend-agnostic LLM blueprints
    "crates/atomr-accel-cuda-realtime", # CUDA-specific realtime sims (NVRTC)
    "crates/atomr-accel-tensorrt",   # TensorRT engine builder + runtime (Phase 8)
    "crates/atomr-accel-cutlass",    # CUTLASS templates via NVRTC (Phase 6)
    "crates/atomr-accel-flashattn",  # FlashAttention v2 + v3 kernel templates (Phase 7)
    "crates/atomr-accel-py",         # Python bindings
    "crates/atomr-accel-telemetry", # NVTX / NVML / CUPTI observability
    "xtask",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/rustakka/atomr-accel"
homepage = "https://github.com/rustakka/atomr-accel"
documentation = "https://docs.rs/atomr-accel"
authors = ["atomr-accel contributors"]
readme = "README.md"
keywords = ["cuda", "gpu", "atomr", "actor", "ml"]
categories = ["concurrency", "asynchronous", "science", "hardware-support"]

[workspace.dependencies]
atomr-core             = { path = "../atomr/crates/atomr-core",             version = "0.3.0" }
atomr-config           = { path = "../atomr/crates/atomr-config",           version = "0.3.0" }
atomr-macros           = { path = "../atomr/crates/atomr-macros",           version = "0.3.0" }
atomr-persistence      = { path = "../atomr/crates/atomr-persistence",      version = "0.3.0" }
atomr-cluster-sharding = { path = "../atomr/crates/atomr-cluster-sharding", version = "0.3.0" }
atomr-streams          = { path = "../atomr/crates/atomr-streams",          version = "0.3.0" }
atomr-telemetry        = { path = "../atomr/crates/atomr-telemetry",        version = "0.3.0" }
atomr-testkit          = { path = "../atomr/crates/atomr-testkit",          version = "0.3.0" }

cudarc       = { version = "0.19.4", features = ["cuda-version-from-build-system", "fallback-latest"] }

tokio        = { version = "1.39", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait  = "0.1"
futures      = "0.3"
futures-util = "0.3"
arc-swap     = "1.7"
parking_lot  = "0.12"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
criterion    = { version = "0.5", default-features = false, features = ["html_reports"] }
once_cell    = "1"

# Python bindings (atomr-accel-py crate).
pyo3                = { version = "0.22", default-features = false }
pyo3-async-runtimes = { version = "0.22", default-features = false, features = ["tokio-runtime"] }
numpy               = { version = "0.22", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
