[package]
name = "atomr-accel-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "actor", "rag", "llm"]
categories = ["concurrency", "asynchronous", "science"]
description = "Agentic / LLM GPU actor blueprints on atomr-accel-cuda: RagPipeline, EmbeddingCache, CpuVectorIndex, SharedGpuStateCoordinator, LangGraphGpuActor."

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
atomr-macros = { workspace = true }
atomr-accel-cuda   = { path = "../atomr-accel-cuda", version = "0.3.3" }
async-trait  = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[lib]
path = "src/lib.rs"
