[package]
name = "atomr-accel-cub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "CUB-backed device-wide reductions, scans, sorts, histograms, and selects, surfaced as an atomr actor compiled per-(op, dtype) via NVRTC against the atomr-accel-cuda Phase 0.6 disk cache."
# Phase 5.1 — every dispatch impl currently returns
# `GpuError::Unrecoverable("kernel compile path lands in Phase 5.1")`.
# Flip to true (and slot into release.yml's publish-crates layer 4)
# once the NVRTC emitters land.
publish = false

[features]
default = []
# Off-by-default GPU runtime tests. Mirrors `atomr-accel-cuda`'s
# `cuda-runtime-tests` so the benches under `benches/` can be enabled
# from a feature-line without pulling everything into `cargo test`.
cuda-runtime-tests = []
# Enable the `f16` / `bf16` op surface (mirrors atomr-accel-cuda's
# `f16` feature). When off, `CubReduceDispatch<f16>` impls are absent.
f16 = ["atomr-accel-cuda/f16"]
# Wire the `nvrtc-lto` flag into the per-(op,dtype) NVRTC compile.
nvrtc-lto = ["atomr-accel-cuda/nvrtc-lto"]

[dependencies]
atomr-core      = { workspace = true }
atomr-accel-cuda = { path = "../atomr-accel-cuda", version = "0.9.1", default-features = false, features = ["nvrtc"] }
cudarc          = { workspace = true }
tokio           = { workspace = true }
async-trait     = { workspace = true }
parking_lot     = { workspace = true }
thiserror       = { workspace = true }
tracing         = { workspace = true }

[dev-dependencies]
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
criterion          = { workspace = true }

[[bench]]
name = "cub_reduce"
harness = false
required-features = ["cuda-runtime-tests"]

[[bench]]
name = "cub_scan"
harness = false
required-features = ["cuda-runtime-tests"]

[[bench]]
name = "cub_sort"
harness = false
required-features = ["cuda-runtime-tests"]

[lib]
path = "src/lib.rs"
