[package]
name = "atomr-accel-cuda-realtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "actor", "simulation", "realtime"]
categories = ["concurrency", "asynchronous", "science", "graphics"]
description = "Interactive-rate GPU actor blueprints on atomr-accel-cuda: ImageFilterPipeline, ParticleSystemActor, SpatialIndexActor, ClothSimulationActor, FluidSimulationActor, plus NVRTC kernel sources."

[features]
default = []
# Pass-through for the upstream atomr-accel-cuda cudnn feature so the
# realtime crate's blueprints can compile against the cuDNN actor
# when the user opts in.
cudnn = ["atomr-accel-cuda/cudnn"]
# Pass-through for the atomr-accel-cuda nvrtc feature. Enables per-actor
# `with_nvrtc(...)` constructors that JIT-compile the bundled CUDA-C
# kernel sources in `kernels/`.
nvrtc = ["atomr-accel-cuda/nvrtc"]

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
atomr-macros = { workspace = true }
atomr-accel-cuda   = { path = "../atomr-accel-cuda", version = "0.3.0" }
async-trait  = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[lib]
path = "src/lib.rs"
