[package]
name = "atomr-accel-cuda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true
description = "GPU acceleration via the actor model. Wraps NVIDIA CUDA libraries (cuBLAS, cuDNN, cuFFT, cuRAND, cuSOLVER, cuSPARSE, cuTENSOR, cuBLASLt, NVRTC, NCCL) as supervised atomr actors with generation-validated buffers and a uniform async surface."

[features]
default = []
# Gates examples and benches that allocate a real CudaContext / launch real kernels.
# Off-by-default so the crate builds and unit-tests on hosts without a GPU
# (cudarc's default features include fallback-dynamic-loading).
cuda-runtime-tests = []

# Per-library actor gates. Each pulls in the matching cudarc feature.
cudnn    = ["cudarc/cudnn"]
cufft    = ["cudarc/cufft"]
cusolver = ["cudarc/cusolver"]
# Sparse arm of cuSOLVER (`cusolverSp`). Builds on top of the
# `cusolver` cudarc feature (which already pulls cusparse) and gates
# the `kernel::solver::sparse` module.
cusolver-sp = ["cusolver"]
cusparse = ["cudarc/cusparse"]
# Phase 4 cuSPARSE generic API (cuSPARSE 12.x SpMM/SpMV/SpGEMM/SpSV
# with descriptor-based handles). On-by-default with `cusparse`.
cusparse-generic = ["cusparse"]
# Phase 4 structured 2:4 sparsity via cuSPARSELt. Off by default;
# requires libcusparseLt.so at runtime (loaded via libloading).
cusparse-lt = []
cutensor = ["cudarc/cutensor"]
# Phase 2 cuTENSOR autotune: probes top-k cutensorAlgo_t variants to
# pick the fastest plan for a given key. Adds a small measurement
# loop to the contraction hot path on first encounter; cached
# afterwards. Off by default — pure cuTENSOR-default works for
# almost every shape and skips the probe cost.
cutensor-autotune = ["cutensor"]
nccl     = ["cudarc/nccl"]
# NCCL fp8 reduction (e4m3 / e5m2). Requires NCCL >= 2.20 at runtime;
# the capability probe degrades gracefully on older drivers.
nccl-fp8 = ["nccl"]
# NVLS topology query / opt-in (NCCL >= 2.18). Currently a build-time
# flag surfaced via NcclCapabilities; runtime probe is best-effort.
nccl-nvls = ["nccl"]
# cublaslt, curand, nvrtc are on-by-default in cudarc; the atomr-accel-cuda
# feature gates the actor module compilation only.
cublaslt = []
curand   = []
# cuRAND host-API path: `curandCreateGeneratorHost` + the host-side
# `curandGenerate*` family that fills *host* buffers (and copies).
# Off by default; pulls only on extra feature gating in the actor.
curand-host = ["curand"]
# Quasi-random (Sobol/Scrambled-Sobol) generator support. cuRAND
# exposes these as `CURAND_RNG_QUASI_*` rng-types — same FFI surface,
# but they require `curandSetQuasiRandomGeneratorDimensions` and
# don't accept a pseudo-seed. Off by default.
curand-quasirandom = ["curand"]
nvrtc    = []
# NVTX range/event annotations layered on `KernelEnvelope`. Pulls in
# cudarc's safe NVTX wrapper. When off, `KernelEnvelope::with_nvtx`
# stores the label but emits no calls (zero runtime cost).
nvtx     = ["cudarc/nvtx"]
# fp8 cuBLAS / cuBLASLt path: activates cudarc 12080+ gating so
# `cudaDataType_t::CUDA_R_8F_E4M3` / `CUDA_R_8F_E5M2` enum values
# resolve, and unlocks the [`crate::kernel::blas::scaling`] helpers +
# cuBLASLt fp8 dispatch. Requires Hopper (sm_90+) at runtime.
cublas-fp8 = ["cublaslt", "f8", "f16"]
# Persistence-backed replay journal for `replay::ReplayHarness`. Pulls
# in `atomr-persistence` for the `Journal`/`PersistentRepr` traits.
# When off, ReplayHarness ships only the in-memory `Vec<JournalEntry>`
# backend. `serde` is always pulled (the NVRTC disk cache uses it),
# so only `serde_json` and `atomr-persistence` are conditional here.
replay   = ["dep:atomr-persistence", "dep:serde_json"]
# Cluster-sharding adapter for `placement::PlacementActor`. Pulls in
# `atomr-cluster-sharding` so callers can address devices via
# `EntityRef<DeviceExtractor>`.
cluster  = ["dep:atomr-cluster-sharding"]
# Streams-based pipeline composition. Pulls in `atomr-streams` so the
# `streams_pipeline` helper module is available alongside the
# actor-based `pipeline::PipelineExecutor`.
streams  = ["dep:atomr-streams"]
# Observability: install atomr-telemetry's TelemetryExtension on the
# host ActorSystem and expose a small set of GPU-specific probes
# (per-device VRAM, GpuRef generation counters, stream pool capacity,
# kernel envelope latency).
telemetry = ["dep:atomr-telemetry"]
# half-precision dtype variants (f16, bf16) for AllocateF16 / AllocateBf16
# and tensor descriptors. Pulls in cudarc's `f16` feature which
# requires `half`.
f16      = ["cudarc/f16", "dep:half", "atomr-accel/f16"]
# 8-bit float wrapper types (`F8E4m3`, `F8E5m2`). Forwards to atomr-accel/f8.
# Phase 1 wires fp8 GEMM through cuBLASLt; Phase 0 only exposes the type
# in the AccelDtype matrix.
f8       = ["atomr-accel/f8"]
# 4-bit float wrapper type (`F4E2m1`). Blackwell.
f4       = ["atomr-accel/f4"]

# Convenience aggregates.
core-libs     = ["cudnn", "cufft", "curand", "cusparse", "cutensor"]
training-libs = ["core-libs", "cusolver", "cublaslt", "nvrtc"]
full-cuda     = ["training-libs", "nccl"]

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
atomr-macros = { workspace = true }
atomr-accel  = { path = "../atomr-accel", version = "0.1.0", default-features = false }
cudarc       = { workspace = true }
tokio        = { workspace = true }
async-trait  = { workspace = true }
futures      = { workspace = true }
futures-util = { workspace = true }
arc-swap     = { workspace = true }
parking_lot  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
bitflags     = "2"
lru          = "0.12"
libloading   = "0.9"
half         = { version = "2", optional = true }
tokio-stream = "0.1"
atomr-persistence = { workspace = true, optional = true }
atomr-cluster-sharding = { workspace = true, optional = true }
atomr-streams = { workspace = true, optional = true }
atomr-telemetry = { workspace = true, optional = true }
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", optional = true }
# NVRTC persistent kernel cache (Phase 0.6). `bincode = "1"` for the
# on-disk format; `dirs` for `$XDG_CACHE_HOME` / `$HOME/.cache` probing.
bincode      = "1"
dirs         = "5"

[dev-dependencies]
tokio              = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tracing-subscriber = { workspace = true }
criterion          = { workspace = true }
atomr-testkit      = { workspace = true }
tempfile           = "3"

[[example]]
name = "echo_no_gpu"

[[example]]
name = "pipeline_no_gpu"

[[example]]
name = "sgemm"
required-features = ["cuda-runtime-tests"]

[[example]]
name = "dgemm"
required-features = ["cuda-runtime-tests"]

[[example]]
name = "gemv"
required-features = ["cuda-runtime-tests"]

[[example]]
name = "axpy_dot"
required-features = ["cuda-runtime-tests"]

[[example]]
name = "gemm_fp8"
required-features = ["cuda-runtime-tests"]

[[example]]
name = "rng_uniform"
required-features = ["cuda-runtime-tests", "curand"]

[[example]]
name = "rng_sobol"
required-features = ["cuda-runtime-tests", "curand", "curand-quasirandom"]

[[example]]
name = "fft_1d"
required-features = ["cuda-runtime-tests", "cufft"]

[[example]]
name = "fft_3d"
required-features = ["cuda-runtime-tests", "cufft"]

[[example]]
name = "jit_relu"
required-features = ["cuda-runtime-tests", "nvrtc"]

[[example]]
name = "matmul_fp8"
required-features = ["cuda-runtime-tests", "cublaslt", "f16", "cublas-fp8"]

[[example]]
name = "solver_svd_batched"
required-features = ["cuda-runtime-tests", "cusolver"]

[[example]]
name = "allgather_bf16"
required-features = ["cuda-runtime-tests", "nccl", "f16"]

[[example]]
name = "reduce_scatter_fp8"
required-features = ["cuda-runtime-tests", "nccl", "nccl-fp8", "f16", "cublas-fp8"]

[[example]]
name = "conv2d_nhwc_fp16"
required-features = ["cuda-runtime-tests", "cudnn", "f16"]

[[example]]
name = "layernorm"
required-features = ["cuda-runtime-tests", "cudnn", "f16"]

[[example]]
name = "rnn_lstm"
required-features = ["cuda-runtime-tests", "cudnn", "f16"]

[[example]]
name = "fused_mha_bf16"
required-features = ["cuda-runtime-tests", "cudnn", "f16"]

[[example]]
name = "tensor_reduce"
required-features = ["cuda-runtime-tests", "cutensor", "f16"]

[[bench]]
name = "sgemm_overhead"
harness = false
required-features = ["cuda-runtime-tests"]

[[bench]]
name = "rng_throughput"
harness = false
required-features = ["cuda-runtime-tests", "curand"]

[lib]
path = "src/lib.rs"
