[package]
name = "atomr-accel-patterns"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["cuda", "gpu", "actor", "batching", "inference"]
categories = ["concurrency", "asynchronous", "science"]
description = "Universal GPU actor blueprints for atomr-accel-cuda: DynamicBatchingServer, InferenceCascade, ModelReplicaPool, FairShareScheduler, ModelHotSwapServer, SpeculativeDecoder, MoeRouter."

[dependencies]
atomr-core   = { workspace = true }
atomr-config = { workspace = true }
atomr-macros = { workspace = true }
atomr-accel-cuda   = { path = "../atomr-accel-cuda", version = "0.3.3" }
async-trait  = { workspace = true }
tokio        = { workspace = true }
parking_lot  = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]
path = "src/lib.rs"

[[example]]
name = "batching_no_gpu"

[[example]]
name = "cascade_no_gpu"

[[example]]
name = "fair_share_no_gpu"

[[example]]
name = "speculative_no_gpu"

[[example]]
name = "moe_no_gpu"
